fix(advanced-1.3): change class names according to BEM and fix typos

--- a/style.css
+++ b/style.css
@@ -5,15 +5,20 @@
   font-family: Lato, sans-serif;
 }
 .header {
+  text-align: right;
+}
+
+.header__wrapper {
   width: 500px;
   margin: 0 auto;
   display: block;
-  text-align: right;
 }
-.header-image {
+
+.header__image {
   width: 100%;
 }
-.more-info {
+
+.header__info {
   font-family: fantasy, cursive;
 }
 
@@ -27,16 +32,18 @@
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
+
 .task-row-wrapper {
   display: flex;
 }
 ul {
-  margin:0;
+  margin: 0;
   padding: 0px;
 }
 li, 
@@ -61,7 +68,7 @@ button {
 }
 /* Heading */
 .heading-3,
-.new-task-label {
+.task-form__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -70,7 +77,7 @@ button {
   margin: 0;
   text-transform: uppercase;
 }
-.task-input {
+.task-item__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,12 +89,12 @@ button {
   font-family: Lato, sans-serif;
   color: #888;
 }
-.task-input:focus {
+.task-item__input:focus {
   color: #333;
 }
 
 /* New Task */
-.new-task-label {
+.task-form__label {
   display: block;
   margin: 0 0 20px;
 }
@@ -108,44 +115,45 @@ button {
   vertical-align: middle;
 }
 
-.check-input {
+.task-item__check {
   margin: 0 10px;
 }
-.task-label {
+.task-item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.task-input {
+.task-item__input {
   width: 226px
 }
 
-.delete img {
+.button_delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.delete img:hover {
+
+.button_delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks label {
+#completed-tasks .task-item__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.task-input {
+.task-item__input {
   display: none;
 }
 
-.edit-mode .task-input {
+.task-item_edit .task-item__input {
   display: inline-block;
   width: 224px;
 }
 
-.edit-mode .task-label {
+.task-item_edit .task-item__label {
   display: none;
 }
