--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .header {
   text-align: right;
 }
@@ -33,7 +34,9 @@
   margin: 0 auto 0;
 }
 
-.task {
+.task-item__input,
+.task-item__label,
+#new-task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
@@ -46,14 +49,17 @@ ul {
   margin: 0;
   padding: 0px;
 }
+
 li, 
 h3 {
   list-style: none;
 }
+
 input,
 button {
   outline: none;
 }
+
 .button {
   background: none;
   border: 0px;
@@ -63,6 +69,7 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 .button:hover {
   color: #3a3a3a;
 }
@@ -77,7 +84,8 @@ button {
   margin: 0;
   text-transform: uppercase;
 }
-.task-item__input {
+.task-item__input,
+#new-task {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -88,9 +96,9 @@ button {
   border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
-  width: 226px;
 }
-.task-item__input:focus {
+.task-item__input:focus,
+#new-task:focus {
   color: #333;
 }
 
@@ -99,6 +107,7 @@ button {
   display: block;
   margin: 0 0 20px;
 }
+
 #new-task {
   width: 318px;
 }
@@ -112,6 +121,7 @@ button {
   justify-content: space-between;
   align-items: center;
 }
+
 .task-item > * {
   vertical-align: middle;
 }
@@ -119,10 +129,15 @@ button {
 .task-item__check {
   margin: 0 10px;
 }
+
 .task-item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
+  width: 226px;
+}
+
+.task-item__input {
   width: 226px;
 }
 
